Force the first line edit to be focussed on load.

BUG: 271624
REVIEW: 101735