gabble/main-options-widget-googletalk.cpp
@@ -34,6 +34,7 @@ MainOptionsWidgetGoogleTalk::MainOptionsWidgetGoogleTalk(ParameterEditModel *mod
 
     handleParameter("account", QVariant::String, m_ui->accountLineEdit, m_ui->accountLabel);
     handleParameter("password", QVariant::String, m_ui->passwordLineEdit, m_ui->passwordLabel);
+    QTimer::singleShot(0, m_ui->accountLineEdit, SLOT(setFocus()));
 }
 
 MainOptionsWidgetGoogleTalk::~MainOptionsWidgetGoogleTalk()
