gabble/main-options-widget.cpp
@@ -35,6 +35,7 @@ MainOptionsWidget::MainOptionsWidget(ParameterEditModel *model,
     handleParameter("account", QVariant::String, m_ui->accountLineEdit, m_ui->accountLabel);
     handleParameter("password", QVariant::String, m_ui->passwordLineEdit, m_ui->passwordLabel);
     handleParameter("register", QVariant::Bool, m_ui->registerCheckBox, 0);
+    QTimer::singleShot(0, m_ui->accountLineEdit, SLOT(setFocus()));
 }
 
 MainOptionsWidget::~MainOptionsWidget()
