haze/aim-main-options-widget.cpp
@@ -35,6 +35,7 @@ AimMainOptionsWidget::AimMainOptionsWidget(ParameterEditModel* model, QWidget* p
     //map the widgets to their data
     handleParameter("account", QVariant::String, m_ui->accountLineEdit, m_ui->accountLabel);
     handleParameter("password", QVariant::String, m_ui->passwordLineEdit, m_ui->passwordLabel);
+    QTimer::singleShot(0, m_ui->accountLineEdit, SLOT(setFocus()));
 }
 
 AimMainOptionsWidget::~AimMainOptionsWidget()
