haze/icq-main-options-widget.cpp
@@ -34,6 +34,7 @@ IcqMainOptionsWidget::IcqMainOptionsWidget(ParameterEditModel *model,
 
     handleParameter("account", QVariant::String, m_ui->accountLineEdit, m_ui->accountLabel);
     handleParameter("password", QVariant::String, m_ui->passwordLineEdit, m_ui->passwordLabel);
+    QTimer::singleShot(0, m_ui->accountLineEdit, SLOT(setFocus()));
 }
 
 IcqMainOptionsWidget::~IcqMainOptionsWidget()
