sunshine/sunshine-main-options-widget.cpp
@@ -33,6 +33,8 @@ SunshineMainOptionsWidget::SunshineMainOptionsWidget(ParameterEditModel *model, 
 
     handleParameter("account",  QVariant::String, m_ui->accountLineEdit,  m_ui->accountLabel);
     handleParameter("password", QVariant::String, m_ui->passwordLineEdit, m_ui->passwordLabel);
+
+    QTimer::singleShot(0, m_ui->accountLineEdit, SLOT(setFocus()));
 }
 
 SunshineMainOptionsWidget::~SunshineMainOptionsWidget()
